todo app updated

--- a/task-28/todo-app/tsconfig.json
+++ b/task-28/todo-app/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "../../task-27/dark"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
